# BuchJa

./: .gitignore  CONTRIBUTING.md  NOTICE.md  README.md  SECURITY.md  SPEC.md  TODO.md  ai_config.json  book_creator.spec  build.py  build.toml  pyproject.toml  research.md
.github/agents/: Research.agent.md  plan_after_research.agent.md
.github/prompts/: implement_plan_and_research.prompt.md  plan_after_research.prompt.md  research.prompt.md
src/: __init__.py  _utils.py  app.py  hook-pythonnet_runtime.py  main.py  utils.py
src/components/: __init__.py  image_cropper.py  image_cropper.vue  image_manager.py  sketch_canvas.py  sketch_canvas.vue  status_footer.py
src/services/: __init__.py  ai_config.py  gemini_usage.py  image_service.py  logging_config.py  pdf_service.py  settings.py
src/tabs/: add.py  crop.py  export.py  generate.py  instructions.py  manage.py  settings.py  sketch.py
tests/: __init__.py  conftest.py
tests/integration/: test_dirty_settings.py  test_export_workflow.py  test_image_workflow.py  test_settings_workflow.py  test_tab_navigation.py  test_usage_header.py
tests/unit/: test_ai_config_consistency.py  test_gemini_usage.py  test_image_cropper.py  test_image_manager.py  test_image_manager_rename.py  test_image_service.py  test_pdf_service.py  test_settings.py  test_status_footer.py
