[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "BuchJa"
version = "0.1.2"
description = "Create illustrated books with AI image generation"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = "MIT"
authors = [{ name = "Stephan Probst" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Artistic Software",
]
keywords = ["ai", "gemini", "image-generation", "book", "illustration", "gui", "nicegui"]
dependencies = [
    "nicegui[native]>=2.0.0",
    "google-genai>=1.0.0",
    "pillow>=10.0.0",
    "keyring>=25.0.0",
    "reportlab>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/stephprobst/BuchJa"
Repository = "https://github.com/stephprobst/BuchJa"
Documentation = "https://github.com/stephprobst/BuchJa#readme"


[project.optional-dependencies]
bundle = ["pyinstaller>=6.0.0"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.0.0",
    "pip-licenses>=5.0.0",
    "genbadge[coverage]>=1.1.0",
    "ruff>=0.1.0",
]

[project.scripts]
BuchJa = "src.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-v --tb=short"
main_file = "src/main.py"
markers = [
    "unit: Unit tests (fast, mocked)",
    "integration: Integration tests (NiceGUI User simulation)",
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]
